# toyscript

./: .gitmodules  CMakeLists.txt  README.md
cmake/: macros.cmake
code/: CMakeLists.txt
code/client/: CMakeLists.txt  main.cpp  pch.h
code/common/: CMakeLists.txt  common.h
code/common/script/: script.cpp  script.h  tokenizer.cpp  tokenizer.h
code/test/: CMakeLists.txt  tokenizer.cpp
script/: sample.toy
